File opening + tidy up

--- a/src/main/resources/strings/ca_ES.properties
+++ b/src/main/resources/strings/ca_ES.properties
@@ -5,3 +5,4 @@ recent_files=Fitxers recents
 exit=Sortir
 cancel=Cancel·lar
 exit_confirmation=Estas segur que vols sortir?
+dont_show_again=No tornar a mostrar
