--- a/src/main/resources/strings/en_US.properties
+++ b/src/main/resources/strings/en_US.properties
@@ -5,3 +5,4 @@ recent_files=Recent Files
 exit=Exit
 cancel=Cancel
 exit_confirmation=Are you sure you want to exit?
+dont_show_again=Don't show again
